# local-vpt

./: Cargo.toml  README.md
src/: camera.rs  gpu.rs  gpu2.rs  main.rs  math.rs  mcm_renderer.rs  mcm_renderer2.rs  pipeline.rs
src/shaders/: MCM.wgsl  main_OLD.wgsl  mcm_main_fragment.wgsl  mcm_main_vertex.wgsl  mcm_reset_fragment.wgsl  reset.wgsl  reset_OLD.wgsl  tm_artistic_fragment.wgsl
src/shaders/new/: mcm_reset_fragment.wgsl
