[package]
name = "local-vpt"
author = "Gorazd Gorup"
version = "0.1.0"
edition = "2021"
about = "Generates a volume visualization based on given data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}
wgpu = {version = "0.14.0", features = ["spirv"]}
futures-intrusive = "0.4.1"
pollster = "0.2.5"
bytemuck = {version = "1.12.1", features = [ "derive" ]}
rand = "0.8.5"