[package]
name = "vpt-lazy-ripoff"
authors = ["Gorazd Gorup", "Žiga Lesar"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {version = "0.14.0", features = ["spirv"]}
futures-intrusive = "0.4.1"
pollster = "0.2.5"
bytemuck = {version = "1.12.1", features = [ "derive" ]}
rand = "0.8.5"
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }